# note-toker-mokumoku

./: .gitignore  README.md  main.py  pyproject.toml
app/: utils.py
data/processed/: Fri Nov 15 2024_summary.txt
